clean up the login page

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,8 +15,7 @@
 <div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 <div class="container" style="opacity: 0.7;">
     <br />
-    <br />
-    <br />
+    <br /> <br /><br />
     <div class="row">
         <div class="col-3"></div>
 
@@ -131,10 +130,17 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row pb-3">
                         <div class="col">
                             <button type="button" class="btn btn-secondary btn-block" data-toggle="modal" data-target="#contactme">
                                 How to Contact me?
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <button type="button" class="btn btn-primary btn-block"  data-toggle="modal" data-target="#DemoUserLogin">
+                                Login As Demo User
                             </button>
                         </div>
                     </div>
@@ -144,95 +150,8 @@
 
         <div class="col-3"></div>
     </div>
-
-
 </div>
-<div class="container-fluid" style="opacity: 0.7;">
-    <form id="account" method="post" class="form-horizontal form-material">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col">
-                <div class="shadow-lg p-3 mb-4 bg-dark rounded">
-                    <div class="row">
-                        <div class="col text-center">
-                            <h4><span class="iconify" data-icon="wpf:administrator" data-inline="true"></span> Demo Admin</h4>
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            Log in as an Admin with full of functions.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center">
-                            <button type="submit" name="demoEmail" value="DemoAdminEmail" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Admin</button>
-                        
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="shadow-lg p-3 mb-4 bg-dark rounded">
-                    <div class="row">
-                        <div class="col  text-center">
-                            <h4><span class="iconify" data-icon="fa-solid:users-cog" data-inline="true"></span> Demo PM</h4>
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            Log in as a Project Manager to manage your team.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center">
-                            <button type="submit" name="demoEmail" value="DemoPmEmail" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo PM</button>                      
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="shadow-lg p-3 mb-4 bg-dark rounded">
-                    <div class="row">
-                        <div class="col text-center">
-                            <h4><span class="iconify" data-icon="fa-solid:user-secret" data-inline="true"></span> Demo Developer</h4>
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            Log in as a Developer to work as a normal employee.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center">
-                            <button type="submit" name="demoEmail" value="DemoDevEmail" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Developer</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="shadow-lg p-3 mb-4 bg-dark rounded">
-                    <div class="row">
-                        <div class="col text-center">
-                            <h4><span class="iconify" data-icon="fa-solid:user" data-inline="true"></span> Demo Submitter</h4>
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            Log in as a Submitter to work with developer.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center">
-                            <button type="submit" name="demoEmail" value="DemoSubEmail" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Submitter</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col"></div>
-        </div>
-    </form>
 
-</div>
 
 
 @section Scripts {
