--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,13 +13,13 @@
     <div class="star"></div>
 </div>
 <div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
-<div class="container" style="opacity: 0.7;">
+<div class="container" style="opacity: 0.6;">
     <br />
     <br /> <br /><br />
     <div class="row">
-        <div class="col-3"></div>
+        <div class="col"></div>
 
-        <div class="col">
+        <div class="col-6">
             <div class="shadow-lg p-3 mb-4 bg-dark rounded">
                 <div class="row">
                     <div class="col border-right">
@@ -104,7 +104,7 @@
                         }
                     }
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-1">
                     <div class="row pb-3">
                         <div class="col">
                             <p>
@@ -137,7 +137,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row pb-0 mb-0">
                         <div class="col">
                             <button type="button" class="btn btn-primary btn-block"  data-toggle="modal" data-target="#DemoUserLogin">
                                 Login As Demo User
@@ -148,7 +148,7 @@
             </div>
         </div>
 
-        <div class="col-3"></div>
+        <div class="col"></div>
     </div>
 </div>
 
