--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<CustomUser> SignInManager
 @inject UserManager<CustomUser> UserManager
+@inject ICustomNotificationService NotificationService
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -91,10 +92,10 @@
                         @{
                             var userId = UserManager.GetUserId(User);
 
-                            var replyParents = new List<int>();
-                            replyParents.AddRange(ApplicationDbContext.Reply.Where(r => r.ReceiverId == userId && r.IsSeen == false).Select(r => r.InboxId));
-                            var myNotifications = new List<Inbox>();
-                            myNotifications.AddRange(ApplicationDbContext.Inbox.Where(i => replyParents.Contains(i.Id) || (i.ReceiverId == userId && i.IsSeen == false)));
+                            //var replyParents = new List<int>();
+                            //replyParents.AddRange(ApplicationDbContext.Reply.Where(r => r.ReceiverId == userId && r.IsSeen == false).Select(r => r.InboxId));
+                            //var myNotifications = new List<Inbox>();
+                            //myNotifications.AddRange(ApplicationDbContext.Inbox.Where(i => replyParents.Contains(i.Id) || (i.ReceiverId == userId && i.IsSeen == false)));
 
 
                             var replyList = new List<InboxNotification>();
@@ -168,13 +169,10 @@
                         </li>
                         @{
 
-                            var notification = ApplicationDbContext.Notification.Where(s => s.IsViewed == false).Where(n => n.RecipientId == userId).ToList();
-                            var number_of_notification = notification.Count;
-
+                            var notification = await NotificationService.GetUnReadNotificationAsync(User);
+                            var number_of_notification = notification.Count();
 
                             //-------last notification time section---------------
-
-
                         }
 
                         <!-- Notifications Dropdown Menu -->
