update confirm email and invite ticket to employer

--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -11,7 +11,7 @@
 <div class="row mt-5">
     <div class="col"></div>
     <div class="col">
-        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card shadow-lg mb-5 bg-white rounded">
             <div class="card-header bg-dark">
                 <h3 class="card-title">Resend email confirmation</h3>
             </div>
