--- a/Views/Projects/ManagerUserProject.cshtml
+++ b/Views/Projects/ManagerUserProject.cshtml
@@ -6,7 +6,7 @@
 <br />
 <br />
 <div class="container-fluid" style="padding-left:10%;padding-right:10%;">
-    <div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <div class="shadow-lg mb-5 bg-white rounded">
         <div class="row">
             <div class="col">
                 <div class="card">
