--- a/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-2"></div>
     <div class="col">
-        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card shadow-lg mb-5 bg-white rounded">
             <div class="card-header text-center">
                 <h1 class="text-danger">@ViewData["Title"]</h1>
             </div>
