--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -2,12 +2,32 @@
 @model ConfirmEmailModel
 @{
     ViewData["Title"] = "Confirm email";
+    ViewData["background"] = "/img/4kpic4.jpg";
 }
+<div class="sky-container">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+</div>
+<div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 
-<div class="container-fluid">
+<div class="container" style="opacity: 0.9;padding-top:15%;">
     <div class="row">
         <div class="col text-center">
-            <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Go to Home Page</a>
+            <h1>Congratulation</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col text-center">
+            <h3>You successfully registered on our service</h3>
+        </div>
+    </div>
+    <br />
+    <div class="row" style="opacity: 0.8;">
+        <div class="col text-center">
+            <a class="btn btn-secondary" asp-controller="Home" asp-action="Index"><span class="iconify d-none d-sm-inline-block" data-icon="ant-design:home-filled" data-inline="true"></span> Go To Home Page</a>
         </div>
     </div>
 </div>
