--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -8,7 +8,7 @@
     <div class="col-2"></div>
     <div class="col">
        
-            <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="card shadow-lg mb-5 bg-white rounded">
                 <div class="card-header bg-dark">
                     <h3 class="card-title">Create New Invite Ticket</h3>
 
@@ -28,16 +28,6 @@
                                     <input asp-for="Email" class="form-control" />
                                     <span asp-validation-for="Email" class="text-danger"></span>
                                 </div>
-                                <div class="form-group">
-                                    <label asp-for="CompanyToken" class="control-label"></label>
-                                    <input asp-for="CompanyToken" class="form-control" />
-                                    <span asp-validation-for="CompanyToken" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="InviteDate" class="control-label"></label>
-                                    <input asp-for="InviteDate" class="form-control" />
-                                    <span asp-validation-for="InviteDate" class="text-danger"></span>
-                                </div>
                                 <div class="form-group form-check">
                                     <label class="form-check-label">
                                         <input class="form-check-input" asp-for="IsValid" /> @Html.DisplayNameFor(model => model.IsValid)
@@ -47,14 +37,7 @@
                                     <label asp-for="CompanyId" class="control-label"></label>
                                     <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
                                 </div>
-                                <div class="form-group">
-                                    <label asp-for="InvitorId" class="control-label"></label>
-                                    <select asp-for="InvitorId" class="form-control" asp-items="ViewBag.InvitorId"></select>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="InviteeId" class="control-label"></label>
-                                    <select asp-for="InviteeId" class="form-control" asp-items="ViewBag.InviteeId"></select>
-                                </div>
+                             
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-primary"><i class="fas fa-location-arrow"></i> Send Invite Ticket</button>
                                     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
