--- a/Views/Projects/DemoUser.cshtml
+++ b/Views/Projects/DemoUser.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col"></div>
     <div class="col">
-        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card shadow-lg mb-5 bg-white rounded">
             <div class="card-header bg-danger">
                 <h3 class="card-title">Demo User Warning</h3>
             </div>
