--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -4,18 +4,45 @@
     ViewData["Title"] = "Log out";
 }
 
-<header>
-    <h1>@ViewData["Title"]</h1>
-    @{
-        if (User.Identity.IsAuthenticated)
-        {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
-            </form>
-        }
-        else
-        {
-            <p>You have successfully logged out of the application.</p>
-        }
-    }
-</header>
+ ViewData["background"] = "/img/4kpic4.jpg";
+}
+<div class="sky-container">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+</div>
+<div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
+
+<div class="container" style="opacity: 0.9;padding-top:15%;">
+    <div class="row">
+        <div class="col text-center">
+            <h1>@ViewData["Title"]</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-4 text-center">
+            @{
+                if (User.Identity.IsAuthenticated)
+                {
+                    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                        <button type="submit" class="nav-link btn btn-link text-white">Click here to Logout</button>
+                    </form>
+                }
+                else
+                {
+                    <p>You have successfully logged out of the application.</p>
+                }
+            }
+        </div>
+        <div class="col"></div>
+    </div>
+    <br />
+    <div class="row" style="opacity: 0.8;">
+        <div class="col text-center">
+            <a class="btn btn-secondary" asp-controller="Home" asp-action="Index"><span class="iconify d-none d-sm-inline-block" data-icon="ant-design:home-filled" data-inline="true"></span> Go To Home Page</a>
+        </div>
+    </div>
+</div>
