--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -2,37 +2,44 @@
 @model ResendEmailConfirmationModel
 @{
     ViewData["Title"] = "Resend email confirmation";
+    ViewData["background"] = "/img/4kpic4.jpg";
 }
+<div class="sky-container">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+</div>
+<div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 
-<br />
-<br />
-<br />
-<br />
-<div class="row mt-5">
-    <div class="col"></div>
-    <div class="col">
-        <div class="card shadow-lg mb-5 bg-white rounded">
-            <div class="card-header bg-dark">
-                <h3 class="card-title">Resend email confirmation</h3>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col test-center">
-                        <form method="post">
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            <div class="form-group">
-                                <label asp-for="Input.Email"></label>
-                                <input asp-for="Input.Email" class="form-control" />
-                                <span asp-validation-for="Input.Email" class="text-danger"></span>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Resend</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+<div class="container" style="opacity: 0.9;padding-top:15%;">
+    <div class="row">
+        <div class="col text-center">
+            <h1>@ViewData["Title"]</h1>
         </div>
     </div>
-    <div class="col"></div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-4 text-center">
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-primary">Resend</button>
+            </form>
+        </div>
+        <div class="col"></div>
+    </div>
+    <br />
+    <div class="row" style="opacity: 0.8;">
+        <div class="col text-center">
+            <a class="btn btn-secondary" asp-controller="Home" asp-action="Index"><span class="iconify d-none d-sm-inline-block" data-icon="ant-design:home-filled" data-inline="true"></span> Go To Home Page</a>
+        </div>
+    </div>
 </div>
 
 
