--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -170,7 +170,9 @@
                         @{
 
                             var notification = await NotificationService.GetUnReadNotificationAsync(User);
-                            var number_of_notification = notification.Count();
+
+                            var welcomeNotification = ApplicationDbContext.WelcomeNotification.Where(n => n.RecipientId == userId && !n.IsViewed).ToList();
+                            var number_of_notification = (notification.Count() + welcomeNotification.Count);
 
                             //-------last notification time section---------------
                         }
@@ -187,10 +189,14 @@
                                 {
                                     <span class="badge badge-warning navbar-badge"></span>
                                 }
-
                             </a>
                             <div class="dropdown-menu dropdown-menu-xl dropdown-menu-right">
-                                <span class="dropdown-item dropdown-header">@number_of_notification Notifications</span>
+                                @if (number_of_notification != 0)
+                                {
+                                    <span class="dropdown-item dropdown-header">@number_of_notification Notifications</span>
+                                }
+
+
                                 <div class="dropdown-divider"></div>
                                 @foreach (var item in notification)
                                 {
@@ -219,6 +225,39 @@
                                         commentdate2 = eslapseSecond2.ToString() + " Seconds Ago";
                                     }
                                     <a asp-controller="Notifications" asp-action="Details" asp-route-id="@item.Id" class="dropdown-item">
+                                        <i class="fas fa-file mr-2"></i> @item.Name
+                                        <span class="float-right text-muted text-sm">@commentdate2</span>
+                                    </a>
+                                    <br />
+                                    <div class="dropdown-divider"></div>
+                                }
+                                @foreach (var item in welcomeNotification)
+                                {
+
+                                    var timeSpan2 = currentTime.Subtract(item.Created);
+                                    var eslapseSecond2 = timeSpan2.Seconds;
+                                    var eslapseMinute2 = timeSpan2.Minutes;
+                                    var eslapseHours2 = timeSpan2.Hours;
+                                    var eslapseDate2 = timeSpan2.Days;
+                                    string commentdate2;
+                                    if (eslapseDate2 >= 1)
+                                    {
+                                        commentdate2 = eslapseDate2.ToString() + " Days Ago";
+
+                                    }
+                                    else if (eslapseHours2 >= 1)
+                                    {
+                                        commentdate2 = eslapseHours2.ToString() + " Hours Ago";
+                                    }
+                                    else if (eslapseMinute2 >= 1)
+                                    {
+                                        commentdate2 = eslapseMinute2.ToString() + " Minutes Ago";
+                                    }
+                                    else
+                                    {
+                                        commentdate2 = eslapseSecond2.ToString() + " Seconds Ago";
+                                    }
+                                    <a asp-controller="WelcomeNotifications" asp-action="Details" asp-route-id="@item.Id" class="dropdown-item">
                                         <i class="fas fa-file mr-2"></i> @item.Name
                                         <span class="float-right text-muted text-sm">@commentdate2</span>
                                     </a>
@@ -402,7 +441,7 @@
                                     </a>
                                 </li>
                             }
-                            else
+                            else if (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Developer.ToString()) || await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString()))
                             {
                                 <li class="nav-item">
                                     <a asp-controller="Tickets" asp-action="Index" class="nav-link">
