--- a/Views/WelcomeNotifications/Details.cshtml
+++ b/Views/WelcomeNotifications/Details.cshtml
@@ -1,11 +1,14 @@
-﻿@model BugTracker.Models.Notification
+﻿@model BugTracker.Models.WelcomeNotification
 
 @{
     ViewData["Title"] = "Details";
 }
 
 
-<br /><br /><br /><br />
+<br />
+<br />
+<br />
+<br />
 <div class="row">
     <div class="col"></div>
     <div class="col-6">
@@ -26,6 +29,15 @@
 
                 <div class="row mb-3">
                     <div class="col">
+                        @Html.DisplayNameFor(model => model.Created)
+                    </div>
+                    <div class="col">
+                        @Html.DisplayFor(model => model.Created)
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col">
                         @Html.DisplayNameFor(model => model.Description)
                     </div>
                     <div class="col">
@@ -41,31 +53,13 @@
                         @Html.DisplayFor(model => model.Sender.FullName)
                     </div>
                 </div>
-
-                <div class="row mb-3">
-                    <div class="col">
-                        @Html.DisplayNameFor(model => model.Ticket)
-                    </div>
-                    <div class="col">
-                        @Html.DisplayFor(model => model.Ticket.Name)
-                    </div>
-                </div>
-
-                <div class="row mb-3">
-                    <div class="col">
-                        Ticket Description
-                    </div>
-                    <div class="col">
-                        @Html.DisplayFor(model => model.Ticket.Description)
-                    </div>
-                </div>       
                 <hr />
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-secondary" asp-action="Index"><i class="fas fa-arrow-left"></i> Back to List</a>                       
-                        <a class="btn btn-info" asp-controller="Tickets" asp-action="Details" asp-route-id="@Model.TicketId"><i class="fas fa-eye"></i> View Ticket Details</a>                        
+                        <a class="btn btn-secondary" asp-controller="Notifications" asp-action="Index"><i class="fas fa-arrow-left"></i> Back to List</a>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
