--- a/Views/Companies/Index.cshtml
+++ b/Views/Companies/Index.cshtml
@@ -20,11 +20,11 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label class="control-label">Company Name</label>
-                                <input name="Name" class="form-control" />
+                                <input name="Name" class="form-control" required />
                             </div>
                             <div class="form-group">
                                 <label class="control-label">Description</label>
-                                <textarea name="Description" class="form-control" rows="4"></textarea>
+                                <textarea name="Description" class="form-control" rows="4" required></textarea>
                             </div>
 
                             <a asp-controller="Projects" asp-action="Index" class="btn btn-secondary">Cancel</a>
