--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -57,12 +57,12 @@
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <div class="form-group">
                                             <label class="control-label">Name</label>
-                                            <input name="Name" class="form-control" />
+                                            <input name="Name" class="form-control" required/>
                                             <span asp-validation-for="Name" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label">Description</label>
-                                            <input name="Description" class="form-control" />
+                                            <input name="Description" class="form-control" required />
                                             <span asp-validation-for="Description" class="text-danger"></span>
                                         </div>
 
@@ -125,11 +125,11 @@
                                     <div class="modal-body">
                                         <div class="form-group">
                                             <label asp-for="Name" class="control-label"></label>
-                                            <input name="Name" class="form-control" />
+                                            <input name="Name" class="form-control" required />
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Description" class="control-label"></label>
-                                            <textarea name="Description" class="form-control" rows="4"></textarea>
+                                            <textarea name="Description" class="form-control" rows="4" required></textarea>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="CompanyId" class="control-label"></label>
@@ -179,13 +179,13 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Name" class="control-label"></label>
-                                            <input asp-for="Name" class="form-control" />
+                                            <input asp-for="Name" class="form-control" required />
                                             <span asp-validation-for="Name" class="text-danger"></span>
                                         </div>
                                         <input type="hidden" asp-for="Created" class="form-control" />
                                         <div class="form-group">
                                             <label asp-for="Description" class="control-label"></label>
-                                            <textarea asp-for="Description" class="form-control" rows="4"></textarea>
+                                            <textarea asp-for="Description" class="form-control" rows="4" required></textarea>
                                             <span asp-validation-for="Description" class="text-danger"></span>
                                         </div>
                                         @if (Model.ImageData != null && Model.ContentType != null)
