--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -19,11 +19,11 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label class="control-label">Project Name</label>
-                                <input name="Name" class="form-control" />
+                                <input name="Name" class="form-control" required/>
                             </div>
                             <div class="form-group">
                                 <label class="control-label">Description</label>
-                                <textarea name="Description" class="form-control" rows="4"></textarea>
+                                <textarea name="Description" class="form-control" rows="4" required></textarea>
                             </div>
                             <div class="form-group">
                                 <label class="control-label">Company</label>
