--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -52,12 +52,12 @@
                                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                 <div class="form-group">
                                                     <label class="control-label">Name</label>
-                                                    <input name="Name" class="form-control" />
+                                                    <input name="Name" class="form-control" required />
 
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="control-label">Description</label>
-                                                    <input name="Description" class="form-control" />
+                                                    <input name="Description" class="form-control" required />
 
                                                 </div>
                                                 <div class="form-group">
