update login and register page

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -17,7 +17,7 @@
     <br /> <br /><br />
     <div class="row">
         <div class="col"></div>
-        <div class="col-3">
+        <div class="col-lg-3">
             <div class="shadow-lg p-3 mb-4 bg-dark rounded ">
                 <div class="row">
                     <div class="col border-right">
