update login and register page

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,7 +17,7 @@
     <br /><br /><br />
     <div class="row">
         <div class="col"></div>
-        <div class="col-lg-3">
+        <div class="col-lg-3half">
             <div class="shadow-lg p-3 mb-5 bg-dark rounded">
                 <div class="row">
                     <div class="col">
